--- a/heating/templates/status.html
+++ b/heating/templates/status.html
@@ -78,10 +78,33 @@
 <div class="mdl-tabs mdl-js-tabs mdl-js-ripple-effect">
 
     <div class="mdl-tabs__tab-bar">
-        <a href="#Cuisine"            class="mdl-tabs__tab cuisine"             onclick="changeActiveTabTo('Cuisine')">Cuisine</a>
-        <a href="#Garage"            class="mdl-tabs__tab garage"             onclick="changeActiveTabTo('Garage')">Garage</a>
-        <a href="#Salon"            class="mdl-tabs__tab salon"             onclick="changeActiveTabTo('Salon')">Salon</a>
-        <a href="#Informatique"     class="mdl-tabs__tab informatique"      onclick="changeActiveTabTo('Informatique')">Informatique</a>
+        {{range .Rooms}}
+        {{if eq .Floor "Rdc"}}
+        <a href="#{{.Name}}"            class="mdl-tabs__tab {{.Name}}"             onclick="changeActiveTabTo('{{.Name}}')">{{.Name}}</a>
+        {{end}}
+        {{end}}
+    </div>
+    <div class="mdl-tabs__tab-bar">
+        {{range .Rooms}}
+        {{if eq .Floor "Premier"}}
+        <a href="#{{.Name}}"            class="mdl-tabs__tab {{.Name}}"             onclick="changeActiveTabTo('{{.Name}}')">{{.Name}}</a>
+        {{end}}
+        {{end}}
+    </div>
+    <div class="mdl-tabs__tab-bar">
+        {{range .Rooms}}
+        {{if eq .Floor "Annexe"}}
+        <a href="#{{.Name}}"            class="mdl-tabs__tab {{.Name}}"             onclick="changeActiveTabTo('{{.Name}}')">{{.Name}}</a>
+        {{end}}
+        {{end}}
+    </div>
+
+     <div class="mdl-tabs__tab-bar">
+        {{range .Rooms}}
+        {{if eq .Floor "Systeme"}}
+        <a href="#{{.Name}}"            class="mdl-tabs__tab {{.Name}}"             onclick="changeActiveTabTo('{{.Name}}')">{{.Name}}</a>
+        {{end}}
+        {{end}}
         <a href="#Lights"           class="mdl-tabs__tab lights"            onclick="changeActiveTabTo('lights')">Lights</a>
         <a href="#Controls"         class="mdl-tabs__tab controls"          onclick="changeActiveTabTo('controls')">Controls</a>
         <a href="#Rollers"          class="mdl-tabs__tab rollers"           onclick="changeActiveTabTo('rollers')">Rollers</a>
@@ -91,7 +114,10 @@
         <a href="#Logs"             class="mdl-tabs__tab logs"              onclick="changeActiveTabTo('logs')">Logs</a>
     </div>
 
-    <div class="mdl-tabs__panel cuisine" id="Cuisine">
+
+    {{$Devices := .DevicesNew}}
+    {{range .Rooms}}
+    <div class="mdl-tabs__panel {{.Name}}" id="{{.Name}}">
         <table class="mdl-data-table mdl-js-data-table">
             <thead>
             <tr>
@@ -111,11 +137,12 @@
             </tr>
             </thead>
             <tbody>
-            {{with .DevicesNew}}
-            {{range .}}
-            {{if eq .Room "Cuisine"}}
+            {{$Room := .Name}}
+            {{range $Devices}}
+            {{with .}}
+            {{if eq .Room $Room}}
             <tr>
-                <td class="leftText">{{.Room}}</td>
+                <td class="leftText">{{$Room}}</td>
                 {{if eq .NewFirmware true}}
                 <td class="leftText" style="color: red">
                     {{.Name}}
@@ -192,6 +219,7 @@
             </tbody>
         </table>
     </div>
+    {{end}}
 
     <div class="mdl-tabs__panel garage" id="Garage">
         <table class="mdl-data-table mdl-js-data-table">
