--- a/heating/templates/status.html
+++ b/heating/templates/status.html
@@ -11,6 +11,52 @@
     <meta charset="UTF-8">
     <title>Domotique</title>
 </head>
+
+
+{{define "Switch"}}
+    <td class="leftText">{{.Device.Type}}</td>
+    {{if eq .Device.NewFirmware true}}
+    <td class="leftText" style="color: red">
+        {{.Device.Name}}
+        <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect"
+                onclick="runAction({{.Device.DomotiqueId}},'/command','update_fw')">Update
+        </button>
+    </td>
+    {{else}}
+    <td class="leftText">{{.Device.Name}}</br>{{.Device.DeviceType}}</br>{{.Device.NameRegistered}}</td>
+    {{end}}
+    <td>
+        <button class=" mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect"
+                onclick="runAction({{.Device.DomotiqueId}} , '/relay/0/command' ,  'on');">On
+        </button>
+    </td>
+    <td id="power_{{.Device.DomotiqueId}}">
+        {{if eq .Device.Power 0.0}}
+        -
+        {{else}}
+        {{.Device.Power}} W
+        {{end}}
+    </td>
+    <td>
+        <button class=" mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect"
+                onclick="runAction({{.Device.DomotiqueId}},'/relay/0/command', 'off');">Off
+        </button>
+    </td>
+    <td id="temperature_{{.Device.DomotiqueId}}">
+        {{if eq .Device.Temperature 0.0}}
+        -
+        {{else}}
+        {{.Device.Temperature}} °C <br> {{.Device.TemperatureTarget}} °C
+        {{end}}
+    </td>
+    <td>
+        {{.Device.DomotiqueId}} - <a href="http://{{.Device.DeviceUrl}}" target="_blank">{{.Device.DeviceId}}</a>
+    </td>
+    </tr>
+{{end}}
+
+
+
 <body>
 <input type="hidden" name="ipPort" id="ipPort" value="{{.IpPort}}"/>
 <div id="demo-snackbar-example" class="mdl-js-snackbar mdl-snackbar">
@@ -121,99 +167,14 @@
     <div class="mdl-tabs__panel {{.Name}}" id="{{.Name}}">
         <table class="mdl-data-table mdl-js-data-table">
             <thead>
-            <tr>
-                <th class="mdl-data-table__cell--non-numeric">Room</th>
-                <th class="mdl-data-table__cell--non-numeric">Description</th>
-                <th class="mdl-data-table__cell--non-numeric">Type</th>
-                <th class="mdl-data-table__cell--non-numeric">On</th>
-                <th class="mdl-data-table__cell--non-numeric">Status</th>
-                <th class="mdl-data-table__cell--non-numeric">Off</th>
-                <th>Power</th>
-                <th>°C</th>
-                <th class="mdl-data-table__cell--non-numeric">Links</th>
-<!--                <th class="mdl-data-table__cell&#45;&#45;non-numeric">Voltage</th>-->
-<!--                <th class="mdl-data-table__cell&#45;&#45;non-numeric">Device T°</th>-->
-<!--                <th class="mdl-data-table__cell&#45;&#45;non-numeric">Over T°</th>-->
-<!--                <th class="mdl-data-table__cell&#45;&#45;non-numeric">T° Status</th>-->
-            </tr>
-            </thead>
+             </thead>
             <tbody>
             {{$Room := .Name}}
             {{range $Devices}}
             {{with .}}
             {{if eq .Room $Room}}
             <tr>
-                <td class="leftText">{{$Room}}</td>
-                {{if eq .NewFirmware true}}
-                <td class="leftText" style="color: red">
-                    {{.Name}}
-                    <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect"
-                            onclick="runAction({{.DomotiqueId}},'/command','update_fw')">Update
-                    </button>
-                </td>
-                {{else}}
-                <td class="leftText">{{.Name}}</td>
-                {{end}}
-                <td class="leftText">{{.Type}}</td>
-                {{if eq .Online true}}
-                <td>
-                    <button class=" mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect"
-                            onclick="runAction({{.DomotiqueId}} , '/relay/0/command' ,  'on');">On
-                    </button>
-                </td>
-                <td  id="status_{{.DomotiqueId}}" >
-                </td>
-                <td>
-                    <button class=" mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect"
-                            onclick="runAction({{.DomotiqueId}},'/relay/0/command', 'off');">Off
-                    </button>
-                </td>
-                {{else}}
-                <td>OffLine</td>
-                <td></td>
-                {{end}}
-                <td id="power_{{.DomotiqueId}}">
-                    {{if eq .Power 0.0}}
-                    -
-                    {{else}}
-                    {{.Power}} W
-                    {{end}}
-                </td>
-                <td id="temperature_{{.DomotiqueId}}">
-                    {{if eq .Temperature 0.0}}
-                    -
-                    {{else}}
-                    {{.Temperature}} °
-                    {{end}}
-                </td>
-                <td>
-                    {{.DomotiqueId}} - <a href="http://{{.DeviceUrl}}" target="_blank">{{.DeviceId}}</a>
-                </td>
-<!--                <td id="voltage_{{.DomotiqueId}}">
-                    {{if eq .Voltage 0.0}}
-                    -
-                    {{else}}
-                    {{.Voltage}}
-                    {{end}}
-                </td>
-                <td id="deviceTemperature_{{.DomotiqueId}}">
-                    {{if eq .DeviceTemperature 0.0}}
-                    -
-                    {{else}}
-                    {{.DeviceTemperature}} °
-                    {{end}}
-                </td>
-                <td id="deviceOverTemperature_{{.DomotiqueId}}">
-                    {{if eq .DeviceOverTemperature 0.0}}
-                    -
-                    {{else}}
-                    {{.DeviceOverTemperature}} °
-                    {{end}}
-                </td>
-                <td id="temperatureStatus_{{.DomotiqueId}}">
-                    {{.TemperatureStatus}}
-                </td>-->
-            </tr>
+                {{template "Switch" dict "Device" . "Room" $Room}}
             {{end}}
             {{end}}
             {{end}}
@@ -221,108 +182,6 @@
         </table>
     </div>
     {{end}}
-
-    <div class="mdl-tabs__panel garage" id="Garage">
-        <table class="mdl-data-table mdl-js-data-table">
-            <thead>
-            <tr>
-                <th class="mdl-data-table__cell--non-numeric">Room</th>
-                <th class="mdl-data-table__cell--non-numeric">Description</th>
-                <th class="mdl-data-table__cell--non-numeric">Type</th>
-                <th class="mdl-data-table__cell--non-numeric">On</th>
-                <th class="mdl-data-table__cell--non-numeric">Status</th>
-                <th class="mdl-data-table__cell--non-numeric">Off</th>
-                <th>Power</th>
-                <th>°C</th>
-                <th class="mdl-data-table__cell--non-numeric">Links</th>
-                <th class="mdl-data-table__cell--non-numeric">Voltage</th>
-                <th class="mdl-data-table__cell--non-numeric">Device T°</th>
-                <th class="mdl-data-table__cell--non-numeric">Over T°</th>
-                <th class="mdl-data-table__cell--non-numeric">T° Status</th>
-            </tr>
-            </thead>
-            <tbody>
-            {{with .DevicesNew}}
-            {{range .}}
-            {{if eq .Room "Garage"}}
-            <tr>
-                <td class="leftText">{{.Room}}</td>
-                {{if eq .NewFirmware true}}
-                <td class="leftText" style="color: red">
-                    {{.Name}}
-                    <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect"
-                            onclick="runAction({{.DomotiqueId}},'/command','update_fw')">Update
-                    </button>
-                </td>
-                {{else}}
-                <td class="leftText">{{.Name}}</td>
-                {{end}}
-                <td class="leftText">{{.Type}}</td>
-                {{if eq .Online true}}
-                <td>
-                    <button class=" mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect"
-                            onclick="runAction({{.DomotiqueId}} , '/relay/0/command' ,  'on');">On
-                    </button>
-                </td>
-                <td  id="status_{{.DomotiqueId}}" >
-                </td>
-                <td>
-                    <button class=" mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect"
-                            onclick="runAction({{.DomotiqueId}},'/relay/0/command', 'off');">Off
-                    </button>
-                </td>
-                {{else}}
-                <td>OffLine</td>
-                <td></td>
-                {{end}}
-                <td id="power_{{.DomotiqueId}}">
-                    {{if eq .Power 0.0}}
-                    -
-                    {{else}}
-                    {{.Power}} W
-                    {{end}}
-                </td>
-                <td id="temperature_{{.DomotiqueId}}">
-                    {{if eq .Temperature 0.0}}
-                    -
-                    {{else}}
-                    {{.Temperature}} °
-                    {{end}}
-                </td>
-                <td>
-                    {{.DomotiqueId}} - <a href="http://{{.DeviceUrl}}" target="_blank">{{.DeviceId}}</a>
-                </td>
-                <td id="voltage_{{.DomotiqueId}}">
-                    {{if eq .Voltage 0.0}}
-                    -
-                    {{else}}
-                    {{.Voltage}}
-                    {{end}}
-                </td>
-                <td id="deviceTemperature_{{.DomotiqueId}}">
-                    {{if eq .DeviceTemperature 0.0}}
-                    -
-                    {{else}}
-                    {{.DeviceTemperature}} °
-                    {{end}}
-                </td>
-                <td id="deviceOverTemperature_{{.DomotiqueId}}">
-                    {{if eq .DeviceOverTemperature 0.0}}
-                    -
-                    {{else}}
-                    {{.DeviceOverTemperature}} °
-                    {{end}}
-                </td>
-                <td id="temperatureStatus_{{.DomotiqueId}}">
-                    {{.TemperatureStatus}}
-                </td>
-            </tr>
-            {{end}}
-            {{end}}
-            {{end}}
-            </tbody>
-        </table>
-    </div>
 
     <div class="mdl-tabs__panel informatique" id="Informatique">
         <table class="mdl-data-table mdl-js-data-table">
@@ -347,108 +206,6 @@
             {{with .DevicesNew}}
             {{range .}}
             {{if eq .Room "Informatique"}}
-            <tr>
-                <td class="leftText">{{.Room}}</td>
-                {{if eq .NewFirmware true}}
-                <td class="leftText" style="color: red">
-                    {{.Name}}
-                    <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect"
-                            onclick="runAction({{.DomotiqueId}},'/command','update_fw')">Update
-                    </button>
-                </td>
-                {{else}}
-                <td class="leftText">{{.Name}}</td>
-                {{end}}
-                <td class="leftText">{{.Type}}</td>
-                {{if eq .Online true}}
-                <td>
-                    <button class=" mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect"
-                            onclick="runAction({{.DomotiqueId}} , '/relay/0/command' ,  'on');">On
-                    </button>
-                </td>
-                <td  id="status_{{.DomotiqueId}}" >
-                </td>
-                <td>
-                    <button class=" mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect"
-                            onclick="runAction({{.DomotiqueId}},'/relay/0/command', 'off');">Off
-                    </button>
-                </td>
-                {{else}}
-                <td>OffLine</td>
-                <td></td>
-                {{end}}
-                <td id="power_{{.DomotiqueId}}">
-                    {{if eq .Power 0.0}}
-                    -
-                    {{else}}
-                    {{.Power}} W
-                    {{end}}
-                </td>
-                <td id="temperature_{{.DomotiqueId}}">
-                    {{if eq .Temperature 0.0}}
-                    -
-                    {{else}}
-                    {{.Temperature}} °
-                    {{end}}
-                </td>
-                <td>
-                    {{.DomotiqueId}} - <a href="http://{{.DeviceUrl}}" target="_blank">{{.DeviceId}}</a>
-                </td>
-                <td id="voltage_{{.DomotiqueId}}">
-                    {{if eq .Voltage 0.0}}
-                    -
-                    {{else}}
-                    {{.Voltage}}
-                    {{end}}
-                </td>
-                <td id="deviceTemperature_{{.DomotiqueId}}">
-                    {{if eq .DeviceTemperature 0.0}}
-                    -
-                    {{else}}
-                    {{.DeviceTemperature}} °
-                    {{end}}
-                </td>
-                <td id="deviceOverTemperature_{{.DomotiqueId}}">
-                    {{if eq .DeviceOverTemperature 0.0}}
-                    -
-                    {{else}}
-                    {{.DeviceOverTemperature}} °
-                    {{end}}
-                </td>
-                <td id="temperatureStatus_{{.DomotiqueId}}">
-                    {{.TemperatureStatus}}
-                </td>
-            </tr>
-            {{end}}
-            {{end}}
-            {{end}}
-            </tbody>
-        </table>
-    </div>
-
-    <div class="mdl-tabs__panel salon" id="Salon">
-        <table class="mdl-data-table mdl-js-data-table">
-            <thead>
-            <tr>
-                <th class="mdl-data-table__cell--non-numeric">Room</th>
-                <th class="mdl-data-table__cell--non-numeric">Description</th>
-                <th class="mdl-data-table__cell--non-numeric">Type</th>
-                <th class="mdl-data-table__cell--non-numeric">On</th>
-                <th class="mdl-data-table__cell--non-numeric">Status</th>
-                <th class="mdl-data-table__cell--non-numeric">Off</th>
-                <th>Power</th>
-                <th>°C</th>
-                <th class="mdl-data-table__cell--non-numeric">Links</th>
-                <th class="mdl-data-table__cell--non-numeric">Voltage</th>
-                <th class="mdl-data-table__cell--non-numeric">Device T°</th>
-                <th class="mdl-data-table__cell--non-numeric">Over T°</th>
-                <th class="mdl-data-table__cell--non-numeric">T° Status</th>
-            </tr>
-            </thead>
-            <tbody>
-            {{with .DevicesNew}}
-            {{range .}}
-            {{if eq .Room "Salon"}}
             <tr>
                 <td class="leftText">{{.Room}}</td>
                 {{if eq .NewFirmware true}}
